# fcm

./: .env.example  .fcm  .gitignore  Cargo.toml  PRD.md  README.md  build-release.sh  progress.txt  ralph-once.sh
fcm-agent/: Cargo.toml
fcm-agent/src/: main.rs
rootfs/: Dockerfile  build.sh  fcm-agent  fcm-deploy  fcm-runner  init
scripts/: build-macos.sh  build-release.sh  build-releases.sh  restart-daemon-dev.sh  restart-daemon.sh
src/: caddy.rs  client.rs  console.rs  daemon.rs  firecracker.rs  git.rs  main.rs  network.rs  session.rs  vm.rs
