[package]
name = "fcm"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
tiny_http = "0.12"
ureq = { version = "2", features = ["json", "tls"] }
libc = "0.2"
dirs = "5"
tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
url = "2"
once_cell = "1"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
